fix: footer wrap
Footer had weird wrap before, now "source code"  goes under "made with"

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
+  text-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 .code {
